# HerSpace

./: .gitignore  CMakeLists.txt  databasemanager.cpp  databasemanager.h  emotionalheartwidget.cpp  emotionalheartwidget.h  healthcalculator.cpp  healthcalculator.h  healthstatsdialog.cpp  healthstatsdialog.h  healthstatsdialog.ui  historymanagerdialog.cpp  historymanagerdialog.h  historymanagerdialog.ui  inspiremanager.cpp  inspiremanager.h  main.cpp  mooddialog.cpp  mooddialog.h  mooddialog.ui  periodconfirmdialog.cpp  periodconfirmdialog.h  periodconfirmdialog.ui  periodstartdialog.cpp  periodstartdialog.h  periodstartdialog.ui  resources.qrc  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  style.qss  widget.cpp  widget.h  widget.ui
grepWinNP3_backup/: healthstatsdialog.cpp  historymanagerdialog.cpp  widget.cpp
grepWinNP3_backup/grepWinNP3_backup/: healthstatsdialog.cpp  historymanagerdialog.cpp  widget.cpp
